feat(build): 完成多模块化重构